hphp/hack/test/typecheck/fc_enum_cyclic_constraint.php.exp
File "fc_enum_cyclic_constraint.php", line 3, characters 6-6:
This enum declaration is invalid.
Read the following to see why: (Typing[4146])
File "fc_enum_cyclic_constraint.php", line 3, characters 17-17:
Cyclic enum constraint
